        PR ld/5785         * ldlang.c (lang_size_sections_1): Honour the setting of an         lma_region even if there is no vma region set, or the vma region         is the same as the lma region.